# OTA_by_CAN_RP2040

./: CMakeLists.txt  LICENSE.md  README.md  can_ota_host.py  example_can_ota.ino  pico_sdk_import.cmake
include/: flash_writer.hpp  mcp2515.hpp  ota_commands.hpp  ota_session.hpp  ws2812.hpp
src/: flash_writer.cpp  main.cpp  mcp2515.cpp  ota_commands.cpp  ota_session.cpp  ws2812.cpp  ws2812.pio
